added movie List and movie List item + Dependency Injection module

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#AEBDCA"
-    tools:context=".ui.view.MovieDetailFragment">
+    tools:context=".ui.view.Details.MovieDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/imgLayout"
