--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn = "navigation_view">
-    <group
-        android:checkableBehavior="single">
+    tools:showIn="navigation_view">
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/baseline_home_24"
-            android:title="Home"/>
+            android:title="Home" />
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/settingsFragment"
             android:icon="@drawable/baseline_settings_24"
-            android:title="Settings"/>
+            android:title="Settings" />
 
         <item
             android:id="@+id/user_favorite"
             android:icon="@drawable/baseline_star_24"
-            android:title="List"/>
+            android:title="List" />
+
+
+        <item
+            android:id="@+id/contactMeFragment"
+            android:icon="@drawable/baseline_emoji_people_24"
+            android:title="Contact Me" />
+        <item
+            android:id="@+id/aboutMeFragment"
+            android:icon="@drawable/baseline_person_24"
+            android:title="About Me" />
 
 
     </group>
-
-    <item
-        android:title="">
-        <menu>
-            <item
-                android:id="@+id/nav_logout"
-                android:icon="@drawable/baseline_emoji_people_24"
-                android:title="Contact Me"/>
-            <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/baseline_person_24"
-                android:title="About Me"/>
-        </menu>
-    </item>
-
 
 
 </menu>
