--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -23,4 +23,19 @@
             android:name="movieID"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.watcht.ui.view.menuDetails.settings.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/contactMeFragment"
+        android:name="com.example.watcht.ui.view.menuDetails.contact.ContactMeFragment"
+        android:label="fragment_contact_me"
+        tools:layout="@layout/fragment_contact_me" />
+    <fragment
+        android:id="@+id/aboutMeFragment"
+        android:name="com.example.watcht.ui.view.menuDetails.about.AboutMeFragment"
+        android:label="fragment_about_me"
+        tools:layout="@layout/fragment_about_me" />
 </navigation>
