--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.view.menuDetails.settings.SettingsFragment">
 
     <TextView
+        android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="settings"
