--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,20 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
+
+
         <item
             android:id="@+id/movieListFragment"
             android:icon="@drawable/baseline_home_24"
             android:title="Home" />
         <item
+            android:id="@+id/myListFragment"
+            android:icon="@drawable/baseline_star_24"
+            android:title="Favorites" />
+        <item
             android:id="@+id/settingsFragment"
             android:icon="@drawable/baseline_settings_24"
             android:title="Settings" />
-
-        <item
-            android:id="@+id/user_favorite"
-            android:icon="@drawable/baseline_star_24"
-            android:title="List" />
-
 
         <item
             android:id="@+id/contactMeFragment"
