--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -17,6 +17,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+
+
         <ImageView
             android:id="@+id/imgMovieBack"
             android:layout_width="match_parent"
@@ -29,8 +31,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgMovie"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/imgPoster"
             android:layout_marginTop="10dp"
             android:layout_width="200dp"
             android:layout_height="300dp"
@@ -40,7 +43,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/RoundedImageView" />
+            app:shapeAppearanceOverlay="@style/RoundedImageView">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/btnSaveOrDelete"
+                android:elevation="10dp"
+                tools:src="@drawable/ic_add"
+                />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imgMovie"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/poster_placeholder"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:shapeAppearanceOverlay="@style/RoundedImageView"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
