Adding Saving from Popular movies. FULL DELETE INTEGRATED

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/movieListFragment">
+    app:startDestination="@id/myListFragment">
 
     <fragment
         android:id="@+id/movieListFragment"
@@ -25,6 +25,9 @@
         <argument
             android:name="detailType"
             app:argType="string" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_myListFragment"
+            app:destination="@id/myListFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
