--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,15 +4,16 @@
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
 
-
-        <item
-            android:id="@+id/movieListFragment"
-            android:icon="@drawable/baseline_home_24"
-            android:title="Home" />
         <item
             android:id="@+id/myListFragment"
             android:icon="@drawable/baseline_star_24"
             android:title="Favorites" />
+
+        <item
+            android:id="@+id/movieListFragment"
+            android:icon="@drawable/ic_add"
+            android:title="Popular Movies" />
+
         <item
             android:id="@+id/settingsFragment"
             android:icon="@drawable/baseline_settings_24"
